# geocfd-Ubuntu

./: .gitignore  CMakeLists.txt  README.md  buildingset_1_interior_original.json  datatwo_buildings_1_2.city.json
data/: 1-3.city.json  3dbag_v210908_fd2cee53_5907.json:Zone.Identifier  MINK_ON_001_buildingset_1_interior_original.city.json  SimpleBuildings.json  adjacency3.txt  adjacency4.txt  bbox.city.json  bignefpolyhedron.json  bignefpolyhedron_convex.json  complement.city.json  complement_mink.city.json  dataset_3_1_2.city.json  dataset_3_1_3.city.json  dataset_3_original_1_2.city.json  dataset_3_original_1_3.city.json
data/erosion_tests/: eroded-exterior.city.json
data/old-other/: MINK_ON_buildingset_1_interior_original.city.json
include/: json.hpp:Zone.Identifier
src/: FileIO.h  JsonHandler.h  JsonWriter.h  MultiThread.hpp  Polyhedron.h  main  main.cpp
